# claude-sdk-workflow

./: PLAN.md  consolidate.sh
sdk-workflow/: .coverage  CONSOLIDATION_ARCHITECTURE.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_INDEX.md  CONSOLIDATION_REPORT.md  MANAGER_ENHANCEMENTS_SUMMARY.md  MIGRATION_SUMMARY.md  PHASE_1_1_VALIDATION_REPORT.md  PHASE_1_COMPLETE_SUMMARY.md  QUICK_REFERENCE.md  SDK_OPTIMIZATION_PLAN.md  pyproject.toml  requirements.txt
sdk-workflow/backup/: ENHANCED_PROMPTS_INTEGRATION.md  MAILBOX_QUICKSTART.md  ORCHESTRATOR_MODULES.md  UNIFIED_SDK_CHANGES.md  test_enhanced_prompts.py  test_orchestrator_modules.py  test_session_resume.py
sdk-workflow/cleanup_reports/: cleanup_report_20251201_032021.json  cleanup_report_20251201_032021.txt  cleanup_report_20251201_032511.json  cleanup_report_20251201_032511.txt
sdk-workflow/docs/: MAILBOX_SYSTEM.md  TODOWRITE_BEST_PRACTICES.md  TODOWRITE_EXAMPLES.md
sdk-workflow/docs/architecture/: SDK_ARCHITECTURE.md  (+1 more)
sdk-workflow/examples/: mailbox_example.py  mailbox_messagebus_integration_example.py
sdk-workflow/sdk_workflow/: CLEANUP_ROADMAP.md  CLEANUP_SCRIPT_GUIDE.md  CLEANUP_STATUS.md  DEPRECATION.md  MAILBOX_MESSAGEBUS_INTEGRATION.md  __init__.py  __main__.py
sdk-workflow/sdk_workflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sdk-workflow/tests/: CHECKPOINT_SESSION_TEST_SUMMARY.md  test_checkpoint_manager.py  test_cost_manager.py  test_error_handling.py  test_mailbox.py  test_session_manager.py  test_token_manager.py  test_token_manager_summary.md
(+218 files in other folders)
