[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-workflow"
version = "0.1.0"
description = "Claude Code SDK workflow execution framework"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sdk-workflow = "sdk_workflow.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk_workflow*"]
